Fixes in launching Setu service from Java